# dwmstatus

./: README.md  dwmstatus.py  pyproject.toml
